# fluffy-pancake

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
benches/: apricot.rs  apricot_avx2.rs  apricot_classic.rs  arith.rs  bench.rs  bits.rs  chou_orlandi.rs  fpake.rs  garble.rs  many_fpake.rs  one_of_many.rs  ot.rs  polynomial.rs
plots/: 1_to_n_ot.plt  1_to_n_ot_chou_orlandi.plt  1_to_n_ot_chou_orlandi_based.plt  1_to_n_ot_chou_orlandi_based_throughput.plt  1_to_n_ot_chou_orlandi_throughput.plt  1_to_n_ot_throughput.plt  apricot.plt  apricot_throughput.plt  apricot_x86.plt  apricot_x86_throughput.plt  chou_orlandi.plt  chou_orlandi_throughput.plt  evaluate.plt  evaluate_throughput.plt  fpake.plt  fpake_hamming_distance.plt  fpake_hamming_distance_throughput.plt  fpake_password.plt  fpake_password_throughput.plt  fpake_throughput.plt  garble.plt  garble_throughput.plt  garbled_circuits.plt  garbled_circuits_evaluate.plt  garbled_circuits_evaluate_throughput.plt  garbled_circuits_garble.plt  garbled_circuits_garble_throughput.plt  garbled_circuits_throughput.plt  generic_implementation.plt  generic_implementation_throughput.plt  makefile  many_fpake_fpake_comparison.plt  one_of_many_fpake.plt  one_of_many_fpake_baseline.plt  one_of_many_fpake_mfpake.plt  one_of_many_fpake_mfpake_hd.plt  one_of_many_fpake_mfpake_hd_comparison.plt  one_of_many_fpake_mfpake_hd_throughput.plt  one_of_many_fpake_mfpake_og_comparison.plt  one_of_many_fpake_mfpake_throughput.plt  (+50 more)
plots/magicmerge/: Program.cs
src/: arith.rs  circuit.rs  circuits.rs  common.rs  fpake.rs  garble.rs  instrument.rs  legacy_fpake.rs  lib.rs  main.rs  many_fpake.rs  ot.rs  util.rs  wires.rs  yao.rs
src/client/: main.rs
src/ot/: apricot.rs  apricot_avx2.rs  bitmatrix.rs  chou_orlandi.rs  coinflip.rs  common.rs  keller_orsini_scholl.rs  mod.rs  one_of_many.rs  polynomial.rs  util.rs
src/server/: main.rs
