[package]
name = "magic-pake"
version = "0.1.0"
edition = "2021"
description = "A library for performing fuzzy password authenticated key exchange (fPAKE)"
readme = "README.md"
keywords = ["crypto", "fPAKE", "password", "authenticated", "key", "exchange"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aes-gcm = "0.9.4"
sha2 = "0.10.1"
itertools = "0.10.3"
rand = {version = "0.8.4", features = ["min_const_gen"]}
rand_chacha = "0.3.1"
curve25519-dalek = {version = "4.0.0-pre.1", features = ["std"]}
bytemuck = "1.7.3"
num-traits = "0.2.14"
bincode = "1.0"
serde = {version = "1.0.136",  features = ["derive"]}
crossbeam-channel = "0.5"
rayon = "1.5.1"
ductile = "0.2.0"
bitvec = {version = "1.0.0", features = ["alloc", "serde"]}

[features]
simd = ["curve25519-dalek/simd_backend", "rand/simd_support"]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "chou_orlandi"
harness = false

[[bench]]
name = "one_of_many"
harness = false

[[bench]]
name = "garble"
harness = false

[[bench]]
name = "fpake"
harness = false
