[package]
name = "magic-pake"
version = "0.1.0"
edition = "2021"
description = "A library for performing fuzzy password authenticated key exchange (fPAKE)"
readme = "README.md"
keywords = ["crypto", "fPAKE", "password", "authenticated", "key", "exchange"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
aes-gcm = "0.9.4"
sha2 = "0.10.1"
hmac = "0.12.1"
itertools = "0.10.3"
rand = {version = "0.8.4", features = ["min_const_gen"]}
rand_old = {package = "rand", version = "0.7.0"}
rand_chacha = "0.3.1"
rand_core = "0.6.3"
curve25519-dalek = {version = "4.0.0-pre.1", features = ["std"]}
x25519-dalek = "2.0.0-pre.1"
ed25519-dalek = "1.0.1"
bytemuck = "1.7.3"
bincode = "1.0"
serde = {version = "1.0.136",  features = ["derive"]}
rayon = "1.5.1"
ductile = "0.2.0"
num-traits = "0.2"
num-integer = "0.1.44"
superluminal-perf = "0.1.1"
num_cpus = "1.13.1"
clap = { version = "3.1.15", features = ["derive"] }


[features]
simd = ["curve25519-dalek/simd_backend", "rand/simd_support"]
instrument = []

[profile.release]
debug = 2

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "chou_orlandi"
harness = false

[[bench]]
name = "apricot_classic"
harness = false
[[bench]]
name = "apricot"
harness = false

[[bench]]
name = "one_of_many"
harness = false

[[bench]]
name = "garble"
harness = false

[[bench]]
name = "fpake"
harness = false

[[bench]]
name = "many_fpake"
harness = false

[[bench]]
name = "polynomial"
harness = false
